// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Flash/> renders <Flash /> component 1`] = `
<Styled(Component)
  variant="danger"
>
  <MarkdownRenderer
    markdown="Error"
  />
  <ForwardRef(Bootstrap(Button))
    className="close"
    onClick={[MockFunction]}
  >
    <FontAwesome
      name="times"
    />
  </ForwardRef(Bootstrap(Button))>
</Styled(Component)>
`;

exports[`<Flash/> updates via props 1`] = `
<Styled(Component)
  variant="success"
>
  <MarkdownRenderer
    markdown="Success"
  />
  <ForwardRef(Bootstrap(Button))
    className="close"
    onClick={[MockFunction]}
  >
    <FontAwesome
      name="times"
    />
  </ForwardRef(Bootstrap(Button))>
</Styled(Component)>
`;
